# task-arousal

./: .gitignore  analyze.py  preprocess.py  pyproject.toml  requirements.txt
atlas/: TY17.dlabel.nii  TY7.dlabel.nii  pre_post_central_fsLR32k.L.func.gii  pre_post_central_fsLR32k.R.func.gii
scripts/: aal_to_roi_mask.py  cifti_movie.py  cifti_snapshot.py  mat_fslr32k_to_dlabel.py  nifti_movie.py  nifti_snapshot.py  nsd_func_masks.py  nsd_transform.py  tune_temporal_decay_estimator.py
task_arousal/: __init__.py  constants.py
task_arousal/analysis/: __init__.py  basis.py  cap.py  complex_pca.py  dataset.py  dlm.py  ev_avg.py  glm.py  pca.py  pls.py  rrr.py  seed_fc.py  utils.py
task_arousal/dataset/: __init__.py  dataset_euskalibur.py  dataset_group.py  dataset_hcp.py  dataset_ibc.py  dataset_nsd.py  dataset_pan.py  dataset_utils.py  ibc_conditions.json  openneuro_fitlin_contrasts.json  pan_conditions.json
task_arousal/io/: __init__.py  file.py
task_arousal/misc/: __init__.py  project_vol_to_surf.py
task_arousal/preprocess/: __init__.py  physio_features.py  pipeline.py
task_arousal/preprocess/components/: __init__.py  multiecho_fit.py  physio.py  surface.py  volume.py  workbench.py
templates/: README.md
